Bug 444644 - When an OBJECT_SHOW event is fired, its MSAA states are not properly set yet; r=MarcoZ, r=surkov